tests/transpiler/x/rb/group_by.rb
# Generated by Mochi transpiler v0.10.32 on 2025-07-21 09:00 +0000
People = Struct.new(:name, :age, :city, keyword_init: true)
people = [People.new(name: "Alice", age: 30, city: "Paris"), People.new(name: "Bob", age: 15, city: "Hanoi"), People.new(name: "Charlie", age: 65, city: "Paris"), People.new(name: "Diana", age: 45, city: "Hanoi"), People.new(name: "Eve", age: 70, city: "Paris"), People.new(name: "Frank", age: 22, city: "Hanoi")]
_stats_groups = {}
for person in people
  if _stats_groups[person["city"]] == nil
    _stats_groups[person["city"]] = {"key" => person["city"], "items" => []}
  end
  _stats_groups[person["city"]]["items"].<<(person)
end
stats = []
for g in _stats_groups.values()
  stats.<<({"city" => g["key"], "count" => g["items"].length, "avg_age" => sprintf("%.17g", ((begin
    _res = []
    for p in g["items"]
      _res << p["age"]
    end
  _res
end).sum.to_f / (begin
  _res = []
  for p in g["items"]
    _res << p["age"]
  end
_res
end).length))})
end
puts("--- People grouped by city ---")
for s in stats
puts(([s["city"], ": count =", s["count"], ", avg_age =", s["avg_age"]]).join(' ').rstrip())
end
